# skeletal_animation_demo

./: .gitignore  Cargo.toml  README.md
assets/: assets.json  clips.json  human_controller.json  test.blend  test.dae  walking_blend_tree.json
src/: demo.rs  main.rs  menu.rs  sdl2_window_output.rs
