[package]

name = "skeletal_animation_demo"
version = "0.0.1"
authors = ["Steve Jahns <s.t.jahns@gmail.com>"]

[[bin]]
name = "demo"
path = "src/main.rs"

[dependencies]
skeletal_animation = "0.39.0"
gfx_gl = "0.5.0"
env_logger = "0.6.0"
collada = "0.13.0"
vecmath = "1.0.0"
quaternion = "0.4.0"
dual_quaternion = "0.1.0"
gfx = "0.18.1"
gfx_device_gl = "0.16.2"
piston-gfx_texture = "0.41.0"
interpolation = "0.2.0"
piston-float = "1.0.0"
shader_version = "0.6.0"
sdl2 = "0.34.0"
pistoncore-sdl2_window = "0.65.0"
camera_controllers = "0.32.0"
piston = "0.51.0"
piston_window = "0.110.0"
gfx_text = "0.27.0"
gfx_debug_draw = "0.27.0"
dev_menu = "0.35.0"

