[package]

name = "skeletal_animation_demo"
version = "0.0.1"
authors = ["Steve Jahns <s.t.jahns@gmail.com>"]

[[bin]]
name = "demo"
path = "src/main.rs"

[dependencies]
skeletal_animation = "0.47.0"
gfx_gl = "0.5.0"
env_logger = "0.6.0"
collada = "0.15.0"
vecmath = "1.0.0"
quaternion = "1.0.0"
dual_quaternion = "0.2.0"
gfx = "0.18.1"
gfx_device_gl = "0.16.2"
piston-gfx_texture = "0.44.0"
interpolation = "0.3.0"
piston-float = "1.0.0"
shader_version = "0.7.0"
sdl2 = "0.35.2"
pistoncore-sdl2_window = "0.69.0"
camera_controllers = "0.34.0"
piston = "0.55.0"
piston_window = "0.131.0"
gfx_text = "0.33.0"
gfx_debug_draw = "0.33.0"
dev_menu = "0.41.0"

